# zypp-stack

./: .gitmodules  CMakeLists.txt  README.md  libsolv.patch
